# bluez-gatt

./: CMakeLists.txt  README.md  build.sh
includes/: ble_client.h
libshared/: CMakeLists.txt  att.c  gatt-client.c  gatt-db.c  gatt-helpers.c  gatt-server.c  io-mainloop.c  mainloop.c  queue.c  timeout-mainloop.c  util.c  uuid.c
src/: ble_client.c  config.h.in  http_server.c  http_server.h  main.c
toolchains/: musl-gcc.cmake
